intial commit pushup

--- a/notebooks/run_video.ipynb
+++ b/notebooks/run_video.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "a668d938",
    "metadata": {},
    "outputs": [],
@@ -57,12 +57,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "e62dca0e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "VIDEO_IN = Path(\"..\\data\\istockphoto-1412656736-640_adpp_is.mp4\")\n",
+    "VIDEO_IN = Path(\"D:\\python Practice\\exercise-counter\\data\\istockphoto-1412656736-640_adpp_is.mp4\")\n",
     "VIDEO_OUT = Path(\"../results/annotated_video.mp4\")\n",
     "CSV_OUT = Path(\"../results/reps.csv\")\n",
     "PLOT_OUT = Path(\"../results/angle_plot.png\")\n",
@@ -70,7 +70,7 @@
     "# Make sure these exist\n",
     "assert VIDEO_IN.exists(), \"Input video not found\"\n",
     "\n",
-    "# Initialize pose model (classic MP solutions)\n",
+    "# Initialize pose model \n",
     "pose = PoseDetector()\n",
     "\n",
     "# Initialize counter\n",
@@ -454,6 +454,60 @@
    ],
    "source": [
     "print(f\"Total squats in the video: {counter.count}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "35877a69",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<video src=\"..\\results\\annotated_video.mp4\" controls  >\n",
+       "      Your browser does not support the <code>video</code> element.\n",
+       "    </video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Video object>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import Video\n",
+    "\n",
+    "Video(str(VIDEO_OUT))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5ac1f81c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "\n",
+    "cap = cv2.VideoCapture(str(VIDEO_OUT))\n",
+    "\n",
+    "while cap.isOpened():\n",
+    "    ret, frame = cap.read()\n",
+    "    if not ret:\n",
+    "        break\n",
+    "\n",
+    "    cv2.imshow(\"Annotated Video\", frame)\n",
+    "\n",
+    "    # Press 'q' to exit\n",
+    "    if cv2.waitKey(25) & 0xFF == ord(\"q\"):\n",
+    "        break\n",
+    "\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()\n"
    ]
   }
  ],
